Adding project to GitHub Repo

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
 				</div>
 				<div class="menu"><!--导航-->
 					<ul>
-						<li><a href="index.html" class="text1">首页</a></li>
-						<li><a href="note.html">笔记</a></li>
-						<li><a href="#">资源</a></li>
-						<li><a href="#">音乐</a></li>
-						<li><a href="#">商城</a></li>
-						<li><a href="#">排行榜</a></li>
-						<li><a href="#">留言</a></li>
+						<li><a href="index.html" class="text1">Home</a></li>
+						<li><a href="note.html">Note</a></li>
+						<li><a href="#">Resource</a></li>
+						<li><a href="#">Music</a></li>
+						<li><a href="#">Shop</a></li>
+						<li><a href="#">Rank List</a></li>
+						<li><a href="#">Feedback</a></li>
 					</ul>
 				</div>
 			<div class="abc">
@@ -84,7 +84,7 @@
 		<div id="content">
 		  <div id="content1">
 			<div class="bigtext">
-				<a>正在热映</a>
+				<a>Popular</a>
 			</div>
 			<p>
 			<div class="c1">
