Adding project to GitHub Repo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn"><head>
 <meta charset="UTF-8">
-<title>炫动笔记(airbash) 做自己的笔记!</title>
+<title>FavrCaffe</title>
 <link href="styles/style.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="favicon.ico">
 <link href="styles/login.css" rel="stylesheet" type="text/css">
@@ -9,7 +9,6 @@
 <link href="styles/banner.css" rel="stylesheet" type="text/css">
 <link href="styles/radius.css" rel="stylesheet" type="text/css">
 <link href="styles/content.css" rel="stylesheet" type="text/css">
-<!--<link href="styles/换肤测试版.css" rel="stylesheet" type="text/css">-->
 <link href="styles/music.css" rel="stylesheet" type="text/css">
 <link href="styles/content2.css" rel="stylesheet" type="text/css">
 <link href="styles/footer.css" rel="stylesheet" type="text/css">
@@ -41,10 +40,10 @@
 						<li><a href="#"><img src="images/上传.png" height="23px"></a></li>
 					</ul>
 				</div>
-				<div class="menu"><!--导航-->
+				<div class="menu"><!--Navigate-->
 					<ul>
 						<li><a href="index.html" class="text1">Home</a></li>
-						<li><a href="note.html">Note</a></li>
+						<!-- <li><a href="note.html">Note</a></li> -->
 						<li><a href="#">Resource</a></li>
 						<li><a href="#">Music</a></li>
 						<li><a href="#">Shop</a></li>
@@ -60,168 +59,164 @@
 			</div>
 			<div class="flicker-example" data-block-text="false">
 				 <ul class="weizhi">
-					<li data-background="img/field.jpg">
-					</li>
-					<li data-background="img/forest.jpg">
-					</li>
-					<li data-background="img/frozen-water.jpg">
-					</li>
+					<li data-background="imgs/banner/whole-bean-blends_banner_2048x.jpg"></li>
+					<li data-background="imgs/banner/wholesale_2048x.jpg"></li>
+					<li data-background="imgs/banner/allegra-macchina-capsule-oro-caf_2048x.jpg"></li>
 				</ul>
 			</div>
 		</div>
-	  <div id="radius">
+	  <!-- <div id="radius">
 			<div class="white">
 		  	</div>
 			<div class="radius_content">
-				<div class="radius1"><img src="images/驯龙高手3.png" title="驯龙高手3"></div>
-				<div class="radius1"><img src="images/超人总动员2.png" title="超人总动员2" ></div>
-				<div class="radius1"> <img src="images/X战警-黑凤凰.png" title="X战警-黑凤凰" ></div>
-				<div class="radius1"><img src="images/惊奇女士.png" title="惊奇女士" ></div>
-				<div class="radius1"><img src="images/大闹西游.png" title="大闹西游" ></div>
-				<div class="radius1"><img src="images/刀锋剑客.png" title="刀锋剑客" ></div>
+				<div class="radius1"><img src="imgs/1_1024x1024.png" title=""></div>
+				<div class="radius1"><img src="imgs/2_1024x1024.png" title="" ></div>
+				<div class="radius1"> <img src="imgs/3_1024x1024.png" title="" ></div>
+				<div class="radius1"><img src="imgs/4_1024x1024.png" title="" ></div>
+				<div class="radius1"><img src="imgs/5_1024x1024.png" title="" ></div>
+				<div class="radius1"><img src="imgs/7_1024x1024.png" title="" ></div>
 			</div>
-		</div>
+		</div> -->
 		<div id="content">
 		  <div id="content1">
 			<div class="bigtext">
-				<a>Popular</a>
+				<a>Culture</a>
 			</div>
 			<p>
 			<div class="c1">
 					<a href="#">
-						<div class="img"><img src="images/p2519070834.jpg"></div>
+						<div class="img"><img src="imgs/culture/1_1024x1024.png"></div>
 						<div class="text"><div class="t1">导演 文牧野<p>主演 徐峥/王传君/周一围</p><p>剧情/喜剧</p><p>7月5日 上映</p><p>117分钟 大陆</p></div></div>
-						<div class="text2"><a href="scend.html">我不是药神</a></div>
+						<!-- <div class="text2"><a href="scend.html">我不是药神</a></div> -->
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
-						<div class="img"><img src="images/p2522069454.jpg"></div>
+						<div class="img"><img src="imgs/culture/2_1024x1024.png"></div>
 						<div class="text"><div class="t1">导演 胡安·安东尼奥·巴亚纳<p>主演 克里斯·帕拉特 / 布莱丝·达拉斯·霍华德 / 贾斯蒂斯·史密斯 </p><p>6月15日上映</p><p>128分钟 美国</p></div></div>
-						<div class="text2"><a href="#">侏罗纪世界2</a></div>
+						<!-- <div class="text2"><a href="#">侏罗纪世界2</a></div> -->
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
-						<div class="img"><img src="images/p2522820714.jpg"></div>
+						<div class="img"><img src="imgs/culture/3_1024x1024.png"></div>
 						<div class="text"><div class="t1">导演 何澄<p>主演 刘纯燕/董浩/鞠萍</p><p>动画/家庭</p>7月6日上映<p>80分钟 大陆</p></div></div>
-						<div class="text2"><a href="#">大头儿子和小头爸爸3</a></div>
+						<!-- <div class="text2"><a href="#">大头儿子和小头爸爸3</a></div> -->
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
-						<div class="img"><img src="images/p2523437699.jpg"></div>
+						<div class="img"><img src="imgs/culture/4_1024x1024.png"></div>
 						<div class="text"><div class="t1">导演 小沈阳<p>主演 小沈阳/潘斌龙/宋芸桦</p><p>喜剧/动作</p>6月15日上映<p>99分钟 大陆</p></div>
 						</div>
-						<div class="text2"><a href="#">猛虫过江</a></div>
+						<!-- <div class="text2"><a href="#">猛虫过江</a></div> -->
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
-						<div class="img"><img src="images/p2523437806.jpg"></div>
+						<div class="img"><img src="imgs/culture/5_1024x1024.png"></div>
 						<div class="text"><div class="t1">导演 李昕芸<p>主演 王千源/袁姗姗/刘桦</p><p>喜剧/动作</p><p>6月22日上映</p><p>80分钟 大陆</p></div></div>
-						<div class="text2"><a href="#">龙虾刑警</a></div>
+						<!-- <div class="text2"><a href="#">龙虾刑警</a></div> -->
 				  </a>
 				</div>
 			</p>
 		  	<p>
 				<div class="c1">
 					<a href="#">
-					<div class="img"><img src="images/p2523632181.jpg"></div>
+					<div class="img"><img src="imgs/culture/7_1024x1024.png"></div>
 					<div class="text"><div class="t1">导演 张跃斌<p>主演 韩素媛/蓝波/庞贝童</p><p>惊悚/恐怖</p><p>7月6日上映</p><p>92分钟 大陆</p></div></div>
-					<div class="text2"><a href="#">细思极恐</a></div>
+					<!-- <div class="text2"><a href="#">细思极恐</a></div> -->
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
-					<div class="img"><img src="images/p2524134770.jpg"></div>
+					<div class="img"><img src="imgs/culture/8_1024x1024.png"></div>
 					<div class="text"><div class="t1">导演 史蒂芬.c.米勒<p>主演 西尔维斯特·史泰龙/黄晓明/戴夫·巴蒂斯塔</p><p>动作/惊悚</p><p>6月29日上映</p><p>93分钟 美国</p></div></div>
-					<div class="text2"><a href="#">金蝉脱壳2</a></div>
+					<!-- <div class="text2"><a href="#">金蝉脱壳2</a></div> -->
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
-					<div class="img"><img src="images/p2524606602.jpg"></div>
+					<div class="img"><img src="imgs/culture/9_1024x1024.png"></div>
 					<div class="text"><div class="t1">导演 王劲松<p>主演 池华琼/王宇/何军</p><p>剧情</p><p>6月26日</p><p>80分钟 大陆</p></div></div>
-					<div class="text2"><a href="#">明天有多远</a></div>
+					<!-- <div class="text2"><a href="#">明天有多远</a></div> -->
 					</a>
 				</div>
 			  	<div class="c1">
 					<a href="#">
-					<div class="img"><img src="images/p2525528688.jpg"></div>
+					<div class="img"><img src="imgs/culture/smallbusiness3_1024x1024.jpg"></div>
 					<div class="text"><div class="t1">导演 韩延<p>主演 李易峰/迈克尔·道格拉斯/周冬雨</p><p>剧情/动作</p><p>6月29日</p><p>132分钟 大陆</p></div></div>
-					<div class="text2"><a href="#">动物世界</a></div>
+					<!-- <div class="text2"><a href="#">动物世界</a></div> -->
 					</a>
 				</div>
 			  	<div class="c1">
 					<a href="#">
-					<div class="img"><img src="images/p2525770523.jpg"></div>
+					<div class="img"><img src="imgs/culture/wholesale_1024x1024.jpg"></div>
 					<div class="text"><div class="t1">导演 王家卫<p>主演 张国荣/张曼玉/刘嘉玲</p><p>剧情/爱情</p><p>6月25日上映</p><p>94分钟 香港</p></div></div>
-					<div class="text2"><a href="#">阿飞正传</a></div>
+					<!-- <div class="text2"><a href="#">阿飞正传</a></div> -->
 					</a>
 				</div>
 			</p>
 				<div class="display">
-					<a href="#">查看更多</a>
+					<a href="#">More</a>
 				</div>
 			</div>
 		<div id="content2">
 			<div class="bigtext">
-				<a href="#">正版商城</a>
+				<a href="#">Shop</a>
 			</div>
 			<div class="smalltext">
-					<a href="#">新品上架</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">超前预售</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">热销爆款</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">查看更多</a>
+					<a href="#">New</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Presold</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Popular</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">More</a>
 			</div>
 		  	<div class="c3">
-				<div class="longimg"><a href="#"><img src="images/hellokitty甜甜圈双肩包.jpg"></a>
-				</div>
+				<a href="#"><img class="longimg" src="imgs/goods/promo_italianstyle_20.9.22_1024x1024.png"></a>
 			</div>
 		  	<div class="c2">
-				<div class="smallimg"><img src="images/树人格鲁特.jpg"></div>
+				<div class="smallimg"><img src="imgs/goods/cremoso_front_1024x1024.png"></div>
 				<div class="none1"></div>
 			 	<div class="shop1">
-					<img src="images/购物车.png"><div class="shop2">
-					<a href="#"><img src="images/购物车黄色.png"></a></div>
+					<img src="imgs/ico/cart.png"><div class="shop2">
+					<a href="#"><img src="imgs/ico/yellowcart.png"></a></div>
 			  	</div>
 			</div>
 			<div class="c2">
-				<div class="smallimg"><img src="images/小黄人充电宝.jpg"></div>
+				<div class="smallimg"><img src="imgs/goods/springtime_decaf_500g_1024x1024.png"></div>
 				<div class="none1"></div>
 				<div class="shop1">
-					<img src="images/购物车.png"><div class="shop2">
-					<a href="#"><img src="images/购物车黄色.png"></a></div>
+					<img src="imgs/ico/cart.png"><div class="shop2">
+					<a href="#"><img src="imgs/ico/yellowcart.png"></a></div>
 			  	</div>
 			</div>
 			<div class="c2">
-				<div class="smallimg"><img src="images/哆啦A梦牛年充电宝.jpg"></div>
+				<div class="smallimg"><img src="imgs/goods/biologico_front_300x300_52bdc99f-bd9c-4fff-9209-7f097f161721_1024x1024.png"></div>
 				<div class="none1"></div>
 				<div class="shop1">
-					<img src="images/购物车.png"><div class="shop2">
-					<a href="#"><img src="images/购物车黄色.png"></a></div>
+					<img src="imgs/ico/cart.png"><div class="shop2">
+					<a href="#"><img src="imgs/ico/yellowcart.png"></a></div>
 			  	</div>
 			</div>
 			<div class="c2">
-				<div class="smallimg"><img src="images/擎天柱Q版公仔.jpg"></div>
+				<div class="smallimg"><img src="imgs/goods/intenso500grani_front_1024x1024.png"></div>
 				<div class="none1"></div>
 				<div class="shop1">
-					<img src="images/购物车.png"><div class="shop2">
-					<a href="#"><img src="images/购物车黄色.png"></a></div>
+					<img src="imgs/ico/cart.png"><div class="shop2">
+					<a href="#"><img src="imgs/ico/yellowcart.png"></a></div>
 			  	</div>
 			</div>
 			<div class="c2">
-				<div class="smallimg"><img src="images/星球大战鸭舌帽.jpg"></div>
+				<div class="smallimg"><img src="imgs/goods/espresso_front_1024x1024.png"></div>
 				<div class="none1"></div>
 				<div class="shop1">
-					<img src="images/购物车.png"><div class="shop2">
-					<a href="#"><img src="images/购物车黄色.png"></a></div>
+					<img src="imgs/ico/cart.png"><div class="shop2">
+					<a href="#"><img src="imgs/ico/yellowcart.png"></a></div>
 			  	</div>
 			</div>
 			<div class="c2">
-				<div class="smallimg"><img src="images/汪汪队立大功旅行箱.jpg" ></div>
+				<div class="smallimg"><img src="imgs/goods/premium_front_1024x1024.png" ></div>
 				<div class="none1"></div>
 				<div class="shop1">
-					<img src="images/购物车.png"><div class="shop2">
-					<a href="#"><img src="images/购物车黄色.png"></a></div>
+					<img src="imgs/ico/cart.png"><div class="shop2">
+					<a href="#"><img src="imgs/ico/yellowcart.png"></a></div>
 			  	</div>
 			</div>
 			</div>
