Adding project to GitHub Repo

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 				</div>
 				<div class="login">
 					<ul id="nav">
-						<li class="li1"><a href="#"><img src="images/搜索.png" height="23px"></a><input class="input1" type="text" name="userName" size="15" maxlength="15" value="电影或明星" /> </li>
-						<li><a href="#"><img src="images/login.png" height="23px"></a></li>
-						<li><a href="#"><img src="images/客户端.png" height="23px"></a>
+						<li class="li1"><a href="#"><img src="imgs/ico/search.png" height="23px"></a><input class="input1" type="text" name="userName" size="15" maxlength="15" value="Search Your Favor" /> </li>
+						<li><a href="#"><img src="imgs/ico/login.png" height="23px"></a></li>
+						<li><a href="#"><img src="imgs/ico/client.png" height="23px"></a>
 							<ul>
-								<li><img src="images/mm_facetoface_collect_qrcode_1530512823419.png" height="150px"></li>
+								<li><img src="imgs/ico/client.png" height="150px"></li>
 							</ul>
 						</li>
-						<li><a href="#"><img src="images/上传.png" height="23px"></a></li>
+						<li><a href="#"><img src="imgs/ico/upload.png" height="23px"></a></li>
 					</ul>
 				</div>
 				<div class="menu"><!--Navigate-->
@@ -86,37 +86,37 @@
 			<div class="c1">
 					<a href="#">
 						<div class="img"><img src="imgs/culture/1_1024x1024.png"></div>
-						<div class="text"><div class="t1">导演 文牧野<p>主演 徐峥/王传君/周一围</p><p>剧情/喜剧</p><p>7月5日 上映</p><p>117分钟 大陆</p></div></div>
-						<!-- <div class="text2"><a href="scend.html">我不是药神</a></div> -->
+						<div class="text"><div class="t1">The quality of your coffee begins with the beans. Look for freshly roasted beans from a reputable roaster; the flavor deteriorates over time, so freshness matters.</div></div>
+						<div class="text2"><a href="scend.html">High-Quality Beans</a></div>
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
 						<div class="img"><img src="imgs/culture/2_1024x1024.png"></div>
-						<div class="text"><div class="t1">导演 胡安·安东尼奥·巴亚纳<p>主演 克里斯·帕拉特 / 布莱丝·达拉斯·霍华德 / 贾斯蒂斯·史密斯 </p><p>6月15日上映</p><p>128分钟 美国</p></div></div>
-						<!-- <div class="text2"><a href="#">侏罗纪世界2</a></div> -->
+						<div class="text"><div class="t1">Coffee starts losing its flavor within minutes after grinding. For the best taste, grind your beans right before brewing.</div></div>
+						<div class="text2"><a href="#">Grind Right Before Brewing</a></div>
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
 						<div class="img"><img src="imgs/culture/3_1024x1024.png"></div>
-						<div class="text"><div class="t1">导演 何澄<p>主演 刘纯燕/董浩/鞠萍</p><p>动画/家庭</p>7月6日上映<p>80分钟 大陆</p></div></div>
-						<!-- <div class="text2"><a href="#">大头儿子和小头爸爸3</a></div> -->
+						<div class="text"><div class="t1">Different brewing methods require different grind sizes. For example, espresso requires a fine grind, while French press coffee requires a coarse grind. </div></div>
+						<div class="text2"><a href="#">Use the Proper Grind Size</a></div>
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
 						<div class="img"><img src="imgs/culture/4_1024x1024.png"></div>
-						<div class="text"><div class="t1">导演 小沈阳<p>主演 小沈阳/潘斌龙/宋芸桦</p><p>喜剧/动作</p>6月15日上映<p>99分钟 大陆</p></div>
+						<div class="text"><div class="t1">Use fresh, cold water that is filtered or free of impurities. Water quality can significantly affect the taste of your coffee.</div>
 						</div>
-						<!-- <div class="text2"><a href="#">猛虫过江</a></div> -->
+						<div class="text2"><a href="#">Water Quality Is Crucial</a></div>
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
 						<div class="img"><img src="imgs/culture/5_1024x1024.png"></div>
-						<div class="text"><div class="t1">导演 李昕芸<p>主演 王千源/袁姗姗/刘桦</p><p>喜剧/动作</p><p>6月22日上映</p><p>80分钟 大陆</p></div></div>
-						<!-- <div class="text2"><a href="#">龙虾刑警</a></div> -->
+						<div class="text"><div class="t1">Ideal brewing temperature is generally between 195°F and 205°F. Too hot and it can burn the coffee; too cool and it may result in under-extraction.</div></div>
+						<div class="text2"><a href="#">Correct Water Temperature</a></div>
 				  </a>
 				</div>
 			</p>
@@ -124,36 +124,36 @@
 				<div class="c1">
 					<a href="#">
 					<div class="img"><img src="imgs/culture/7_1024x1024.png"></div>
-					<div class="text"><div class="t1">导演 张跃斌<p>主演 韩素媛/蓝波/庞贝童</p><p>惊悚/恐怖</p><p>7月6日上映</p><p>92分钟 大陆</p></div></div>
-					<!-- <div class="text2"><a href="#">细思极恐</a></div> -->
+					<div class="text"><div class="t1">The standard ratio is approximately 2 tablespoons of coffee for every 6 ounces of water. However, adjust to your preference for stronger or lighter coffee.</div></div>
+					<div class="text2"><a href="#">Measuring Matters</a></div>
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
 					<div class="img"><img src="imgs/culture/8_1024x1024.png"></div>
-					<div class="text"><div class="t1">导演 史蒂芬.c.米勒<p>主演 西尔维斯特·史泰龙/黄晓明/戴夫·巴蒂斯塔</p><p>动作/惊悚</p><p>6月29日上映</p><p>93分钟 美国</p></div></div>
-					<!-- <div class="text2"><a href="#">金蝉脱壳2</a></div> -->
+					<div class="text"><div class="t1">Store coffee in a cool, dark place in an airtight container. Coffee can absorb flavors and moisture from the air, so keep it away from spices or anything with a strong smell.</div></div>
+					<div class="text2"><a href="#">Beware of Coffee Storage</a></div>
 					</a>
 				</div>
 				<div class="c1">
 					<a href="#">
 					<div class="img"><img src="imgs/culture/9_1024x1024.png"></div>
-					<div class="text"><div class="t1">导演 王劲松<p>主演 池华琼/王宇/何军</p><p>剧情</p><p>6月26日</p><p>80分钟 大陆</p></div></div>
-					<!-- <div class="text2"><a href="#">明天有多远</a></div> -->
+					<div class="text"><div class="t1">Each method gives a different flavor profile. Whether it's a drip brewer, French press, Aeropress, or espresso machine, experiment to find what you enjoy the most.</div></div>
+					<div class="text2"><a href="#">Experiment with Brewing Methods</a></div>
 					</a>
 				</div>
 			  	<div class="c1">
 					<a href="#">
 					<div class="img"><img src="imgs/culture/smallbusiness3_1024x1024.jpg"></div>
-					<div class="text"><div class="t1">导演 韩延<p>主演 李易峰/迈克尔·道格拉斯/周冬雨</p><p>剧情/动作</p><p>6月29日</p><p>132分钟 大陆</p></div></div>
-					<!-- <div class="text2"><a href="#">动物世界</a></div> -->
+					<div class="text"><div class="t1">Keep your coffee maker and grinder clean. Oils and residues can build up over time, imparting stale or off-flavors to your coffee.</div></div>
+					<div class="text2"><a href="#">Cleaning Your Equipment</a></div>
 					</a>
 				</div>
 			  	<div class="c1">
 					<a href="#">
 					<div class="img"><img src="imgs/culture/wholesale_1024x1024.jpg"></div>
-					<div class="text"><div class="t1">导演 王家卫<p>主演 张国荣/张曼玉/刘嘉玲</p><p>剧情/爱情</p><p>6月25日上映</p><p>94分钟 香港</p></div></div>
-					<!-- <div class="text2"><a href="#">阿飞正传</a></div> -->
+					<div class="text"><div class="t1">As soon as coffee is brewed, the flavors start changing. Ideally, serve your coffee immediately after brewing to capture the best flavors. </div></div>
+					<div class="text2"><a href="#">Mind Your Timing</a></div>
 					</a>
 				</div>
 			</p>
@@ -229,7 +229,7 @@
 		-->
 	</div>
 	</div>
-	<div id="footer">
+	<!-- <div id="footer">
 		<div class="lianjie">
 			<a>友情链接</a>
 			<p><a href="https://www.baidu.com/">百度</a><a href="https://www.so.com/">腾讯</a></p>
@@ -251,7 +251,7 @@
 					</div>
 				</div>
 			</div>
-	</div>
+	</div> -->
 	<div id="footer2">
 			<a href="www.airbash.cn">关于本站</a> |
 			<a href="#">联系我们</a> |
