Adding project to GitHub Repo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>FavrCaffe</title>
 <link href="styles/style.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" href="favicon.ico">
+<link rel="shortcut icon" href="icon.png">
 <link href="styles/login.css" rel="stylesheet" type="text/css">
 <link href="styles/absolute.css" rel="stylesheet" type="text/css">
 <link href="styles/banner.css" rel="stylesheet" type="text/css">
@@ -26,7 +26,7 @@
 	<div id="container">
 		<div id="header">
 				<div class="logo">
-					<a href="index.html"><img src="images/logo.png"  height="71px"></a>
+					<a href="index.html"><img src="imgs/ico/icon.png"  height="71px"></a>
 				</div>
 				<div class="login">
 					<ul id="nav">
@@ -43,7 +43,6 @@
 				<div class="menu"><!--Navigate-->
 					<ul>
 						<li><a href="index.html" class="text1">Home</a></li>
-						<!-- <li><a href="note.html">Note</a></li> -->
 						<li><a href="#">Resource</a></li>
 						<li><a href="#">Music</a></li>
 						<li><a href="#">Shop</a></li>
@@ -65,18 +64,6 @@
 				</ul>
 			</div>
 		</div>
-	  <!-- <div id="radius">
-			<div class="white">
-		  	</div>
-			<div class="radius_content">
-				<div class="radius1"><img src="imgs/1_1024x1024.png" title=""></div>
-				<div class="radius1"><img src="imgs/2_1024x1024.png" title="" ></div>
-				<div class="radius1"> <img src="imgs/3_1024x1024.png" title="" ></div>
-				<div class="radius1"><img src="imgs/4_1024x1024.png" title="" ></div>
-				<div class="radius1"><img src="imgs/5_1024x1024.png" title="" ></div>
-				<div class="radius1"><img src="imgs/7_1024x1024.png" title="" ></div>
-			</div>
-		</div> -->
 		<div id="content">
 		  <div id="content1">
 			<div class="bigtext">
@@ -221,71 +208,34 @@
 			</div>
 			</div>
 		</div>
-	<div id="music">
-		<!--<audio controls autoplay loop>
-			<source src="music/张恋歌 - For love.mp3">
-			您的浏览器不支持 audio 元素。
-		</audio>
-		-->
 	</div>
-	</div>
-	<!-- <div id="footer">
-		<div class="lianjie">
-			<a>友情链接</a>
-			<p><a href="https://www.baidu.com/">百度</a><a href="https://www.so.com/">腾讯</a></p>
-			<p><a href="http://www.taobao.com/">淘宝</a><a href="https://www.jd.com/">京东</a></p>
-			<p><a href="http://www.mtime.com">时光网</a><a href="http://movie.douban.com/">豆瓣</a></p>
-			<p><a href="http://www.zcool.com.cn">站酷</a><a href="http://www.lanrentuku.com/">懒人图库</a></p>
-			<p><a href="https://www.baidu.com/">百度</a><a href="https://www.so.com/">360</a></p>
-			<p><a href="https://www.baidu.com/">百度</a><a href="https://www.so.com/">360</a></p>
-		</div>
-			<div class="qindie">
-				<a>关注我们</a>
-				<div class="weibo">
-					<a href="https://weibo.com/ZSPzhaoshuaipeng"><img src="images/微博.png"></a>
-				</div>
-				<div class="weixin">
-					<img src="images/微信.png">
-					<div class="weixinimg">
-						<img src="images/weinxin.png">
-					</div>
-				</div>
-			</div>
-	</div> -->
 	<div id="footer2">
-			<a href="www.airbash.cn">关于本站</a> |
-			<a href="#">联系我们</a> |
-			<a href="#">免责声明</a> |
-			<a href="#">友情链接</a> |
-			<a href="#">版权保护投诉指引</a> |
-			<a href="#">12318 全国文化市场举报网站</a> |
-			<a href="#">网上有害信息举报专区</a>
+			<a href="www.airbash.cn">About</a> |
+			<a href="#">Contact</a> |
+			<a href="#">Disclaimer</a> |
+			<a href="#">Link</a> |
+			<a href="#">Copyright</a>
 		<p>
-			<a>本站所有资源来源于互联网网友交流,只供网络测试和学习交流所用、所有资源版权归原权利人，如有关资源侵犯了你的权益，请联系告之，我们将于第一时间删除！</a>
+		<p><a href="mailto:jackyandsky@gmail.com">jackyandsky@gmail.com</a>
 		</p>
-		<p><a href="mailto:294379349@qq.com">管理员邮箱294379349@qq.com</a>
 
-		</p>
-		<p>
-			<a>鲁ICP备18041747</a>
-		</p>
 	</div>
-	<div id="absolute1" align="center"><!--右侧意见反馈-->
+	<div id="absolute1" align="center"><!--rightsidereaction-->
 		<div class="abs">
-			<img src="images/意见反馈.png" width="35px"><a href="#"><p>意见</p><p>反馈</p></a>
+			<img src="imgs/ico/feedback.png" width="35px"><a href="#"><p>Feedback</p></a>
 		</div>
 		<div class="abs">
-			<img src="images/PC端.png" width="35px"><a href="#"><p>PC端</p><p>下载</p></a>
+			<img src="imgs/ico/pc.png" width="35px"><a href="#"><p>PC</p></a>
 		</div>
 		<div class="abs">
-			<img src="images/客户端.png" width="35px"><a href="#"><p>APP</p><p>下载</p></a>
+			<img src="imgs/ico/client.png" width="35px"><a href="#"><p>APP</p></a>
 		</div>
 		<div class="abs">
-			<img src="images/下载.png" width="35px"><a href="#"><p>极速</p><p>下载</p></a>
+			<img src="imgs/ico/download.png" width="35px"><a href="#"><p>Fast</p></a>
 		</div>
 	</div>
 	<div id="absolute2">
-   		 <a href="index.html"><img src="images/火箭-icon.png" width="60px"></a><!--右下角回到顶部-->
+   		 <a href="index.html"><img src="images/roeket-icon.png" width="60px"></a><!--backtothetop-->
 	</div>
 </div>
 </body>
