--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		</div>
 	</div>
 	<div id="footer2">
-			<a href="www.airbash.cn">About</a> |
+			<a href="#">About</a> |
 			<a href="#">Contact</a> |
 			<a href="#">Disclaimer</a> |
 			<a href="#">Link</a> |
@@ -235,7 +235,7 @@
 		</div>
 	</div>
 	<div id="absolute2">
-   		 <a href="index.html"><img src="images/roeket-icon.png" width="60px"></a><!--backtothetop-->
+   		 <a href="index.html"><img src="imgs/ico/rocket-icon.png" width="60px"></a><!--backtothetop-->
 	</div>
 </div>
 </body>
