--- a/index.html
+++ b/index.html
@@ -179,11 +179,11 @@
                         <label style="color: brown;">Filter By</label>&nbsp;&nbsp;<a onclick="FillContent2div()">Random</a>&nbsp;&nbsp;|
 						<label style="color: brown;" for="fruit">By Flavor:</label>
 						<select id="Flavors" onchange="SelectedChanged()">
-							<option value="acidic">acidic</option>
-							<option value="smooth">smooth</option>
-							<option value="sweet">sweet</option>
-							<option value="robust">robust</option>
-							<option value="strong">strong</option>
+							<option value="acidic">Acidic</option>
+							<option value="smooth">Smooth</option>
+							<option value="sweet">Sweet</option>
+							<option value="robust">Robust</option>
+							<option value="strong">Strong</option>
 						</select>
 						<label style="color: brown;" for="others">Sort By Condition:</label>
 						<select id="others" onchange="SelectedChangedForSort()">
