--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                     <!--Navigate-->
                     <ul>
                         <li><a href="index.html" class="text1">Home</a></li>
-                        <li><a href="#">Resource</a></li>
+                        <!--<li><a href="#">Resource</a></li>
                         <li><a href="#">Music</a></li>
                         <li><a href="#">Shop</a></li>
                         <li><a href="#">Rank List</a></li>
-                        <li><a href="#">Feedback</a></li>
+                        <li><a href="#">Feedback</a></li>-->
                     </ul>
                 </div>
                 <div class="abc">
