--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         <div id="absolute1" align="center">
             <!--rightsidereaction-->
             <div class="abs">
-                <img src="imgs/ico/feedback.png" width="35px"><a href="#">
+                <img src="imgs/ico/feedback.png" width="35px"><a href="feedback.html">
                     <p>Feedback</p>
                 </a>
             </div>
