--- a/feedback.html
+++ b/feedback.html
@@ -113,7 +113,7 @@
         <div id="absolute1" align="center">
             <!--rightsidereaction-->
             <div class="abs">
-                <img src="imgs/ico/feedback.png" width="35px"><a href="/feedback.html">
+                <img src="imgs/ico/feedback.png" width="35px"><a href="feedback.html">
                     <p>Feedback</p>
                 </a>
             </div>
