--- a/feedback.html
+++ b/feedback.html
@@ -77,7 +77,7 @@
                         
                     </p>
                     <div class="formfeedback">
-                        <form action="" method="post">
+                        <form action="#" method="post">
                             <label for="name">Name:</label><br>
                             <input type="text" id="name" name="name" required><br>
                     
