--- a/feedback.html
+++ b/feedback.html
@@ -87,7 +87,7 @@
                             <label for="feedback">Feedback:</label><br><br>
                             <textarea id="feedback" name="feedback" rows="10" cols="40" required></textarea><br>
                     
-                            <input type="submit" value="Submit" onclick="SubmitFeedBack()">
+                            <input type="submit" value="Submit" onclick="SubmitFeedBack(event)">
                         </form>
                     </div>
                     <div class="display">
